kustomize/services/variation-b/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: variation-b
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              serviceName: variation-b
              servicePort: http
            path: /
